# SkillBox_C-_Course

./: .gitignore  Branch.cpp  Branch.h  CMakeLists.txt  Elf.cpp  Elf.h  House.cpp  House.h  README.md  Settlement.cpp  Settlement.h  Tree.cpp  Tree.h  Twig.cpp  Twig.h  Village.cpp  Village.h  main.cpp  office_head.cpp  office_head.h  office_manager.cpp  office_manager.h  office_worker.cpp  office_worker.h
